syntax = "proto3";

package sum;
option go_package="sum/sumpb";

message SumRequest {
  int32 first_value = 1;
  int32 second_value = 2;
}

message SumResponse {
  int32 result = 1;
}

service SumService {
  rpc Sum (SumRequest) returns (SumResponse);
}